--- a/2024_Week36.org
+++ b/2024_Week36.org
@@ -2,6 +2,5 @@
 The goal is to build GUVs and SUVs which are large in size. 
 
 ** Methodology: GUV-F
-We aim to make Fluorescent GUVs. 
-
+We aim to make Fluorescent GUVs with DOPS and DOPC, and Liss-Rhod-PE
 
