--- a/2024.org
+++ b/2024.org
@@ -133,7 +133,7 @@ print("Hello,world")
 #%% Let's make 90% charged DOTAP-DOPC (Positive, non-fluoroscent)
 Chemicals = ['DOPS','DOPC','LissRhod-PE', 'DOTAP', 'NBD-DOTAP']
 Concentrations = [2.5,10,0.01,2.5,0.01]; # In chloroform
-MixtureVolumes = [0,30,20,0,0]; # in microliters
+MixtureVolumes = [0,180,20,0,0]; # in microliters
 Molecular_Weights = [809.518,785.593,1300.712,697.578,710.34]
 
 # Number of Weights in mixture
@@ -160,13 +160,13 @@ print(np.round(MolePercentages,2))
 #+RESULTS:
 : Hello,world
 : Moles
-: [0.      0.38188 0.00015 0.      0.     ]
+: [0.      2.29126 0.00015 0.      0.     ]
 : Weights
-: [  0.  300.    0.2   0.    0. ]
+: [   0.  1800.     0.2    0.     0. ]
 : weight Percentages
-: [ 0.   99.93  0.07  0.    0.  ]
+: [ 0.   99.99  0.01  0.    0.  ]
 : Mole Percentages
-: [ 0.   99.96  0.04  0.    0.  ]
+: [ 0.   99.99  0.01  0.    0.  ]
 
 
 
@@ -221,16 +221,16 @@ Following that osmotic shock will be provided.
 ***  October  9, 2024, Wednesday
 Concentrations
 
-**** GM3 solution:
-Prepare 5mg/ml solution by adding 1mg to 200 ul of chloroform. 
+**** GM3 solution protocol:
+Prepare 5mg/ml solution by adding 5mg to 1ml of chloroform. 
 Deposit 100 ul of this solution into a 1 ml vial and leave for drying overnight.
 
 **** Fluorescent vesicle:
 |-------------+---------------+--------+--------------|
 | Chemical    | concentration | volume | Mole percent |
 |-------------+---------------+--------+--------------|
-| DOPC        | 10 mg/ml      | 30 ul  |       99.96% |
-| LissRhod-PE | 0.01mg/ml     | 20 ul  |        0.04% |
+| DOPC        | 10 mg/ml      | 180 ul |       99.99% |
+| LissRhod-PE | 0.01mg/ml     | 20 ul  |        0.01% |
 |             |               |        |              |
-
+180 ul was used because lissRhod remaining is less and because the color is still very strong at this dilution.
 
