--- a/2024.org
+++ b/2024.org
@@ -4,18 +4,18 @@ The goal is to build GUVs and SUVs which are large in size.
 ** Available solutions and their concentrations
 
 Using the protocol previously made on 29 July 2024. 
-|-------------+------------------+---------------+--------------|
-| Content     | Molecular weight | Concentration |       Volume |
-|             |            grams |         mg/ml |           ml |
-|-------------+------------------+---------------+--------------|
-| DOPS        |          809.518 |           2.5 |          1.5 |
-|             |                  |            10 |          0.2 |
-| DOPC        |          785.593 |            10 |          inf |
-| LissRhod-PE |         1300.712 |            10 | incoming 1mg |
-| DOTAP       |          697.578 |           2.5 |           14 |
-| NBD-DOTAP   |           710.34 |             1 |          1.5 |
-| NBD-DOTAP   |           710.34 |          0.01 |          1.5 |
-|-------------+------------------+---------------+--------------|
+|---------------+------------------+---------------+--------|
+| Content       | Molecular weight | Concentration | Volume |
+|               |            grams |         mg/ml |     ml |
+|---------------+------------------+---------------+--------|
+| DOPS          |          809.518 |           2.5 |    1.5 |
+| DOPS (Powder) |                  |         25 mg |        |
+| DOPC          |          785.593 |            10 |    inf |
+| LissRhod-PE   |         1300.712 |          5 mg |        |
+| DOTAP         |          697.578 |           2.5 |     14 |
+| NBD-DOTAP     |           710.34 |             1 |    1.5 |
+| NBD-DOTAP     |           710.34 |          0.01 |    1.5 |
+|---------------+------------------+---------------+--------|
 
 Sources:
 MW: [809.518,785.593,1300.712,697.578,710.34]
@@ -132,8 +132,8 @@ print("Hello,world")
 
 #%% Let's make 90% charged DOTAP-DOPC (Positive, non-fluoroscent)
 Chemicals = ['DOPS','DOPC','LissRhod-PE', 'DOTAP', 'NBD-DOTAP']
-Concentrations = [2.5,10,0.01,2.5,0.01]; # In chloroform
-MixtureVolumes = [0,180,20,0,0]; # in microliters
+Concentrations = [2.5,2.5,0.05,2.5,0.01]; # In chloroform
+MixtureVolumes = [0,90,10,0,0]; # in microliters
 Molecular_Weights = [809.518,785.593,1300.712,697.578,710.34]
 
 # Number of Weights in mixture
@@ -160,13 +160,13 @@ print(np.round(MolePercentages,2))
 #+RESULTS:
 : Hello,world
 : Moles
-: [0.      2.29126 0.00015 0.      0.     ]
+: [0.      0.28641 0.00038 0.      0.     ]
 : Weights
-: [   0.  1800.     0.2    0.     0. ]
+: [  0.  225.    0.5   0.    0. ]
 : weight Percentages
-: [ 0.   99.99  0.01  0.    0.  ]
+: [ 0.   99.78  0.22  0.    0.  ]
 : Mole Percentages
-: [ 0.   99.99  0.01  0.    0.  ]
+: [ 0.   99.87  0.13  0.    0.  ]
 
 
 
@@ -234,3 +234,23 @@ Deposit 100 ul of this solution into a 1 ml vial and leave for drying overnight.
 |             |               |        |              |
 180 ul was used because lissRhod remaining is less and because the color is still very strong at this dilution.
 
+***  November  7, 2024, Thursday
+
+**** preparation of stock Liss-Rhod PE solution
+We start with the stock 1mg powder of Liss-Rhod PE and then we add it to 20 ml of chloroform to get 0.05 mg/ml of solution. The beakers need to be cleaned with Chloroform. 
+
+**** DOPC Fluorescent vesicle
+This gives us 20 ml of stock solution which we can use for a long time. 
+
+My first goal is to measure the properties of DOPC and DOPE. 
+|-------------+---------------+--------+--------------|
+| Chemical    | concentration | volume | Mole percent |
+|-------------+---------------+--------+--------------|
+| DOPC        | 10 mg/ml      | 80 ul  |       99.92% |
+| LissRhod-PE | 0.05mg/ml     | 20 ul  |        0.08% |
+
+This gives us around 0.1 % solution of Liss-Rhod PE in DOPC. 
+We deposit around 45 ul of this solution on-to two ITO plates. 
+
+This will be followed by electroformation. The inside buffer used is Sucrose and outside is Glucose. 
+Electroformation will be done for 3 hours at 6 Vpp 10 Hz. 
